# BetterAudio

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  package.json
.github/ISSUE_TEMPLATE/: audio_quality.yml  bug.yml  config.yml  crash.yml  feature.yml
.github/workflows/: ci.yml  release.yml
src/: app.css
src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/native/: SCKAudioCapture.swift
src-tauri/src/: commands.rs  lib.rs  main.rs
src-tauri/src/audio/: clock.rs  device.rs  effects.rs  engine.rs  format.rs  graph.rs  input_bridge.rs  macos_hal.rs  mod.rs  pipeline.rs  recorder.rs  resample.rs  sck_capture.rs  streams.rs  system_audio.rs  virtual_device.rs
src-tauri/src/audio/effects/: biquad.rs  channel_balance.rs  compressor.rs  delay.rs  eq.rs  gain.rs  level_meter.rs  limiter.rs  lufs_meter.rs  mod.rs  mute.rs  noise_gate.rs  reverb.rs  saturator.rs  util.rs
src-tauri/src/audio/encoders/: opus.rs
src-tauri/src/audio/pipeline/: dag.rs  file_reader.rs  input.rs  meter.rs  mod.rs
src/lib/components/icons/: arrow_left.svelte  arrow_right.svelte  index.ts  pause.svelte  play.svelte  skip_back_5.svelte  skip_forward_5.svelte  stop.svelte
src/lib/components/layout/: header.svelte
src/lib/modules/app_info/: index.ts
src/lib/modules/audio/: index.ts  methods.ts  stores.svelte.ts  types.ts
src/lib/modules/debug/: index.ts
src/lib/modules/error/: index.ts  init.ts  stores.svelte.ts
src/lib/modules/flow/: index.ts
src/lib/modules/pipeline/: index.ts  methods.ts  types.ts  (+1 more)
src/routes/: +layout.svelte  +page.svelte
src/routes/virtual-devices/: +page.svelte
(+52 files in other folders)
